kubernetes/kafka/istio-virtualservice.template.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kafka
spec:
  gateways:
    - istio-system/all-hosts
  hosts:
    - ${KAFKA_UI_HOSTNAME}
  http:
    - route:
        - destination:
            host: kafka-ui
            port:
              number: 80
      headers:
        request:
          set:
            x-forwarded-proto: https
